central/BLE_Central/BLE_Central.cydsn/REBUILD.log
--------------- Rebuild Started: 12/04/2017 14:25:43 Project: BLE_Central, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM0\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\app_Ble.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\app_UART.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\app_LED.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\teste.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\BLE.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\BLE_gatt.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\BLE_eventHandler.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\BLE_HAL_INT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\BLE_HAL_PVT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\BLE_custom.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Scan_LED.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Scan_LED_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Conn_LED.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Conn_LED_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\UART.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\UART_SPI_UART.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\UART_SPI_UART_INT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\UART_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\UART_UART.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\UART_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\UART_UART_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\BLE_bless_isr.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\UART_SCBCLK.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\UART_tx.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\UART_tx_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\UART_SCB_IRQ.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\UART_rx.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\UART_rx_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Cm0Start.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyLFClk.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\RTC_1.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\BLE_Central.hex"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\BLE_Central.elf"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\BLE_Central.map"
Deleting file ".\BLE_Central.cycdx"
Deleting file ".\BLE_Central.svd"
Deleting file ".\BLE_Central.rpt"
Deleting file ".\BLE_Central_timing.html"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\7709\AppData\Local\Cypress Semiconductor\PSoC Creator\4.1" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\7709\Desktop\BLE\central\BLE_Central\BLE_Central.cydsn\BLE_Central.cyprj -d CYBLE-012011-00 -s C:\Users\7709\Desktop\BLE\central\BLE_Central\BLE_Central.cydsn\Generated_Source\PSoC4 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -O0 -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'HandleBleProcessing':
main.c:158:30: warning: comparison between 'CYBLE_API_RESULT_T {aka enum <anonymous>}' and 'CYBLE_STATE_T {aka enum <anonymous>}' [-Wenum-compare]
         if (cyBle_last_state != cyBle_state) {
                              ^
main.c:171:34: warning: comparison between 'CYBLE_API_RESULT_T {aka enum <anonymous>}' and 'CYBLE_STATE_T {aka enum <anonymous>}' [-Wenum-compare]
             if (cyBle_last_state != cyBle_state) {
                                  ^
main.c:200:31: warning: comparison between 'CYBLE_API_RESULT_T {aka enum <anonymous>}' and 'CYBLE_STATE_T {aka enum <anonymous>}' [-Wenum-compare]
          if (cyBle_last_state != cyBle_state) {
                               ^
main.c: In function 'print_clock':
main.c:537:9: warning: unused variable 'hour' [-Wunused-variable]
     int hour;
         ^
main.c:536:9: warning: unused variable 'sec' [-Wunused-variable]
     int sec;
         ^
main.c:535:9: warning: unused variable 'min' [-Wunused-variable]
     int min;
         ^
In file included from Generated_Source\PSoC4/project.h:45:0,
                 from main.h:19,
                 from main.c:12:
main.c: In function 'set_init_clock':
Generated_Source\PSoC4/RTC_1.h:143:39: warning: statement with no effect [-Wunused-value]
 #define RTC_1_INITIAL_SECOND          (0u)
                                       ^
main.c:564:9: note: in expansion of macro 'RTC_1_INITIAL_SECOND'
         RTC_1_INITIAL_SECOND       clock.second  
         ^
main.c:564:36: error: expected ';' before 'clock'
         RTC_1_INITIAL_SECOND       clock.second  
                                    ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 12/04/2017 14:25:52 ---------------
